--- a/C3-L1 Exercise 3NF to Star Schema.ipynb
+++ b/C3-L1 Exercise 3NF to Star Schema.ipynb
@@ -134,9 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Image, display\n",
-    "image_url = \"https://github.com/cc59chong/Udacity-Data-Engineering-Nanodegree/blob/main/pic/c3-l1-e1-1.PNG\"\n",
-    "display(Image(url=image_url))"
+    "images = [\"https://github.com/cc59chong/Udacity-Data-Engineering-Nanodegree/blob/main/pic/c3-l1-e1-1.PNG\"]"
    ]
   },
   {
