Update C3-L1 Exercise 3NF to Star Schema.ipynb

--- a/C3-L1 Exercise 3NF to Star Schema.ipynb
+++ b/C3-L1 Exercise 3NF to Star Schema.ipynb
@@ -129,12 +129,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "images = [\"https://github.com/cc59chong/Udacity-Data-Engineering-Nanodegree/blob/main/pic/c3-l1-e1-1.PNG\"]"
+    "https://github.com/cc59chong/Udacity-Data-Engineering-Nanodegree/blob/main/pic/c3-l1-e1-1.PNG"
    ]
   },
   {
