--- a/C3-L1 Exercise 3NF to Star Schema.ipynb
+++ b/C3-L1 Exercise 3NF to Star Schema.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![3NF Schema](https://github.com/cc59chong/Udacity-Data-Engineering-Nanodegree/blob/main/pic/c3-l1-e1-1.PNG)"
+    "![3NF Schema](https://raw.githubusercontent.com/cc59chong/Udacity-Data-Engineering-Nanodegree/main/pic/c3-l1-e1-1.PNG)"
    ]
   },
   {
