Update C3-L1 Exercise 2-1 Roll up and Drill Down.ipynb

--- a/C3-L1 Exercise 2-1 Roll up and Drill Down.ipynb
+++ b/C3-L1 Exercise 2-1 Roll up and Drill Down.ipynb
@@ -193,11 +193,11 @@
     "### Star Schema"
    ]
   },
-  {
+{
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"pagila-star.png\" width=\"50%\"/>"
+    "![Star Schema](https://raw.githubusercontent.com/cc59chong/Udacity-Data-Engineering-Nanodegree/main/pic/c3-l1-e1-2.PNG)"
    ]
   },
   {
