--- a/C3-L1 Exercise 2-3 Grouping Sets.ipynb
+++ b/C3-L1 Exercise 2-3 Grouping Sets.ipynb
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"pagila-star.png\" width=\"50%\"/>"
+    "![Star Schema](https://raw.githubusercontent.com/cc59chong/Udacity-Data-Engineering-Nanodegree/main/pic/c3-l1-e1-2.PNG)"
    ]
   },
   {
