--- a/C3-L3 Exercise 2 Creating Redshift Cluster using the AWS python SDK.ipynb
+++ b/C3-L3 Exercise 2 Creating Redshift Cluster using the AWS python SDK.ipynb
@@ -277,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.1 Creating a new IAM Role\n",
+      "## 1.1 Creating a new IAM Role\n",
       "An error occurred (EntityAlreadyExists) when calling the CreateRole operation: Role with name dwhRole already exists.\n"
      ]
     }
@@ -311,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2 Attaching Policy\n"
+      "## 1.2 Attaching Policy\n"
      ]
     },
     {
@@ -342,7 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3 Get the IAM role ARN\n",
+      "## 1.3 Get the IAM role ARN\n",
       "arn:aws:iam::410160547785:role/dwhRole\n"
      ]
     }
