Update C3-L3 Exercise 2 Creating Redshift Cluster using the AWS python SDK.ipynb

--- a/C3-L3 Exercise 2 Creating Redshift Cluster using the AWS python SDK.ipynb
+++ b/C3-L3 Exercise 2 Creating Redshift Cluster using the AWS python SDK.ipynb
@@ -277,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "## 1.1 Creating a new IAM Role\n",
+      "## 1.1 *Describe* Creating a new IAM Role\n",
       "An error occurred (EntityAlreadyExists) when calling the CreateRole operation: Role with name dwhRole already exists.\n"
      ]
     }
